Correct sides parsing for creaking heart

--- a/vueblocks/src/assets/_variables.scss
+++ b/vueblocks/src/assets/_variables.scss
@@ -27,7 +27,7 @@
 $FONTS: system-ui, sans-serif;
 
 $FW_bold: 700;
-$FW_normal: 500; // 400?
+$FW_normal: 500; // TODO: Better use 400 instead?
 $FW_thin: 300;
 
 $BR_regular: 4px;
