--- a/vueblocks/src/assets/_variables.scss
+++ b/vueblocks/src/assets/_variables.scss
@@ -27,7 +27,7 @@
 $FONTS: system-ui, sans-serif;
 
 $FW_bold: 700;
-$FW_normal: 500; // TODO: Better use 400 instead?
+$FW_normal: 500;
 $FW_thin: 300;
 
 $BR_regular: 4px;
@@ -40,7 +40,7 @@ $TR_regular: .2s;
 $TR_fast: .05s;
 
 $SH_regular: 0 2px 4px #0002;
-$SH_subtle: 0 0 2px #0008;
+$SH_subtle: 0 0 2px #0006;
 $SH_smooth: 0 4px 12px #0001;
 
 
