Popover improvements and overlay prototype updates

--- a/vueblocks/src/assets/_popovers.scss
+++ b/vueblocks/src/assets/_popovers.scss
@@ -1,22 +1,35 @@
 @use '@/assets/variables' as *;
 
 .popover {
-    margin-top: 12px; padding: 8px;
+    padding: 8px;
     background-color: $white; color: $black;
     border-radius: $BR_big;
     box-shadow: $SH_smooth, $SH_subtle;
     font-size: 1em; font-family: $FONTS;
     animation: $TR_slow popover-pop;
 }
+
 .popover-arrow {
     z-index: -1;
-    top: -12px;
     width: 24px; height: 24px;
     margin-left: -0.5px;
-    transform: rotate(45deg);
     background-color: $white;
     border-radius: calc($BR_regular / 2);
+
+    &.top {
+        transform: translateY(-12px) rotate(45deg);
+    }
+    &.bottom {
+        transform: translateY(12px) rotate(45deg);
+    }
+    &.left {
+        transform: translateX(-12px) rotate(45deg);
+    }
+    &.right {
+        transform: translateX(12px) rotate(45deg);
+    }
 }
+
 @keyframes popover-pop {
     0% {
         transform: translateY(8px);
@@ -39,6 +52,7 @@
     gap: 4px;
     align-items: stretch;
     min-height: 32px;
+    line-height: calc(200% - 2px);
 
     & > label {
         text-align: left;
@@ -55,9 +69,4 @@
         width: 2px; height: auto;
         background-color: $accent-light;
     }
-}
-
-.color-controls {
-    display: flex;
-    flex-direction: row;
 }
