--- a/vueblocks/src/assets/_variables.scss
+++ b/vueblocks/src/assets/_variables.scss
@@ -34,7 +34,7 @@ $BR_regular: 4px;
 $BR_big: 8px;
 $BR_round: 1280px;
 
-$TR_message: 3s;
+$TR_fancy: 1s;
 $TR_slow: .33s;
 $TR_regular: .2s;
 $TR_fast: .05s;
