Finished BlockPick overlay, updated blacklist, small styling improvements

--- a/vueblocks/src/assets/_popovers.scss
+++ b/vueblocks/src/assets/_popovers.scss
@@ -42,8 +42,7 @@
 }
 
 .popover-content {
-    display: flex;
-    flex-direction: column;
+    display: flex; flex-direction: column;
     gap: 4px;
 }
 
