More midnight code cleanup yaay

--- a/vueblocks/src/assets/_popovers.scss
+++ b/vueblocks/src/assets/_popovers.scss
@@ -72,9 +72,9 @@
 
 .tooltip {
     padding: 4px;
-    background-color: $dark_80; color: $white;
+    background-color: $accent-dark_bg; color: $white;
     border-radius: $BR_regular;
-    font-size: .8em; font-family: $FONTS;
+    font-size: .76em; font-family: $FONTS;
     pointer-events: none;
     z-index: 999;
 
