--- a/vueblocks/src/assets/_popovers.scss
+++ b/vueblocks/src/assets/_popovers.scss
@@ -72,7 +72,7 @@
 
 .tooltip {
     padding: 4px;
-    background-color: $accent-bg; color: $white;
+    background-color: $accent_bg; color: $white;
     border-radius: $BR_regular;
     font-size: .76em; font-family: $FONTS;
     pointer-events: none;
